[package]
name = "wheel"
version = "1.0.0"
authors = ["Claudio Amorim <camorimd@gmail.com>"]
description = "A simple tool to let Twitch Streamers do giveaways"
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
log = "0.4"
simple_logger = "1.6"
reqwest = {version = "0.10", features = ["json"]}
tokio = { version = "0.2", features = ["macros"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
itertools = "0.9.0"
clap = "2.33.1"


[features]
default = []
distribution = []